fix(css): Fix overlapping elements on mobile.

--- a/src/app/lists/lists.component.scss
+++ b/src/app/lists/lists.component.scss
@@ -33,7 +33,6 @@
     padding-left: 1em;
     padding-right: 1em;
     padding-bottom: 1em;
-    flex-basis: 50%;
     flex-grow: 1;
 
     &:last-of-type {
